feat admin management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql8.freesqldatabase.com:3306/sql8585454
-spring.datasource.username=sql8585454
-spring.datasource.password=uh33ieSrNZ
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/springproject
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 server.port=8081
