--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,42 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 server.port=8081
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# client id oauth google
+#468461304393-3hvmdh27t9abetkidgvquila5dvcnblv.apps.googleusercontent.com
+# client secret oauth google
+#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
